<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchTaskActivity"

    >

    <ImageButton
        style="@style/buttonBack"
        android:id="@+id/backBtnSearchBuildStart"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_arrow_circle_left_24"></ImageButton>

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/png"
        android:src="@drawable/frame"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:gravity="bottom"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/findBuild"
            android:textColor="@color/main"
            android:textSize="22sp"

            app:layout_constraintBottom_toTopOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.javaapp.TypeTextView
            android:id="@+id/startTextSearchBuild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/textFindBuild"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonSelectBuild"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/zdanie"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>